add nav, started jumbotron

--- a/index.html
+++ b/index.html
@@ -16,7 +16,41 @@
 </head>
 
 <body>
+   <!-- Header -->
+   <header>
+      <!-- Nav bar -->
+      <nav id="nav" class="clearfix">
+         <!-- Parte sinistra -->
+         <div id="nav-left" class="w-50 f-left">
+            <img id="logo" src="img/logo-small.png" alt="Dropbox Logo">
+            <ul>
+               <li><a href="#">Perchè Dropbox?</a></li>
+               <li><a href="#">Funzioni</a></li>
+               <li><a href="#">Piani e prezzi</a></li>
+            </ul>
+         </div>
+         <!-- Parte destra -->
+         <div id="nav-right" class="w-50 f-left">
+            <ul>
+               <li><a href="#">Supporto</a></li>
+               <li><a href="#">Contatta l'ufficio vendite</a></li>
+               <li><a href="#">Accedi</a></li>
+            </ul>
+            <a class="btn" href="#">Inizia</a>
+         </div>
+      </nav>
+      <!-- Jumbotron -->
+      <div id="jumbotron">
+         <div class="container-70">
+            <div id="jumbo-title">
+               <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+            </div>
+            <div id="jumbo-content">
 
+            </div>
+         </div>
+      </div>
+   </header>
 </body>
 
 </html>
