--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&display=swap"
       rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
    <title>Dropbox Clone</title>
 </head>
 
@@ -41,16 +44,40 @@
       </nav>
       <!-- Jumbotron -->
       <div id="jumbotron">
-         <div class="container-70">
+         <div class="container-70 relative">
+            <!-- Titolo jumbo -->
             <div id="jumbo-title">
                <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             </div>
-            <div id="jumbo-content">
-
+            <div id="jumbo-content" class="clearfix">
+               <!-- testo jumbo -->
+               <div id="j-text-box" class="w-25 f-left">
+                  <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
+                     posto.Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e
+                     integrato per ottimizzare il flusso di lavoro esistente.</p>
+                  <a class="btn" href="#">Inizia la tua prova gratuita</a>
+                  <p id="annulla">Annulla in qualsiasi momento</p>
+                  <a class="arrow-down" href="#">
+                     <i class="fa fa-arrow-down fa-3x"></i>
+                  </a>
+               </div>
+               <!-- Immagine jumbotron -->
+               <div id="j-img-box" class="w-75 f-left">
+                  <img src="img/jumbo.png" alt="Jumbo">
+               </div>
             </div>
+
          </div>
+         <div id="white-bar"></div>
       </div>
    </header>
+   <!-- Main -->
+   <main>
+      <div class="container-60">
+         <section id="prices">
+         </section>
+      </div>
+   </main>
 </body>
 
 </html>
