add first price table

--- a/index.html
+++ b/index.html
@@ -75,6 +75,42 @@
    <main>
       <div class="container-60">
          <section id="prices">
+            <h2>Trova il piano Dropbox Business che fa per te</h2>
+            <div id="scelta-fatturazione">
+               <div class="fake-radio first"></div>
+               <span class="fatturazione">Fatturazione mensile</span>
+               <div class="fake-radio second"></div>
+               <span class="fatturazione">Fatturazione annuale</span>
+            </div>
+            <div id="prices-table" class="clearfix">
+               <div class="table first f-left">
+                  <div class="n-customer">
+                     <span>
+                        <i class="far fa-user"></i>
+                        Singolo
+                     </span>
+                  </div>
+                  <div class="price-info-box">
+                     <h2>Professional</h2>
+                     <h3 class="price">19,99 &euro;</h3>
+                     <p class="price-time">/ mese</p>
+                     <p class="info-user">
+                        <i class="far fa-user"> </i>
+                        1 utente
+                     </p>
+                     <p class="info-user">
+                        <i class="far fa-folder"></i>
+                        3 TB di spazio di archiviazione sicuro
+                     </p>
+                     <p class="info-user">
+                        <i class="far fa-user"> </i>
+                        1 utente
+                     </p>
+                  </div>
+               </div>
+               <div class="table second f-left"></div>
+               <div class="table third f-left"></div>
+            </div>
          </section>
       </div>
    </main>
