--- a/index.html
+++ b/index.html
@@ -94,22 +94,154 @@
                      <h2>Professional</h2>
                      <h3 class="price">19,99 &euro;</h3>
                      <p class="price-time">/ mese</p>
-                     <p class="info-user">
-                        <i class="far fa-user"> </i>
-                        1 utente
-                     </p>
-                     <p class="info-user">
-                        <i class="far fa-folder"></i>
-                        3 TB di spazio di archiviazione sicuro
-                     </p>
-                     <p class="info-user">
-                        <i class="far fa-user"> </i>
-                        1 utente
-                     </p>
+                     <!-- Icon section -->
+                     <ul>
+                        <li><i class="far fa-user"></i> 1 utente</li>
+                        <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
+                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file
+                           semplice e sicura</li>
+                     </ul>
+                     <!-- Button -->
+                     <div class="prova-button">
+                        <a class="btn" href="#">Prova gratis per 30 giorni</a>
+                     </div>
+                     <!-- Acquista ora -->
+                     <span>Oppure</span>
+                     <span><a href="#">acquista ora</a></span>
+                     <!-- Punti salienti del piano -->
+                     <h3>Punti salienti del piano</h3>
+                     <div class="punti-salienti">
+                        <ul>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Invia file fino a 100 GB con Dropbox Transfert
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Cartella offline su dispositivi mobili
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Pulizia remota dell'acount
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Filigrana documento
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Assistenza prioritaria via email e chat
+                           </li>
+                        </ul>
+                     </div>
                   </div>
                </div>
-               <div class="table second f-left"></div>
-               <div class="table third f-left"></div>
+               <div class="table second f-left">
+                  <div class="n-customer">
+                     <span>
+                        <i class="far fa-user"></i>
+                        Singolo
+                     </span>
+                  </div>
+                  <div class="price-info-box">
+                     <h2>Professional</h2>
+                     <h3 class="price">19,99 &euro;</h3>
+                     <p class="price-time">/ mese</p>
+                     <!-- Icon section -->
+                     <ul>
+                        <li><i class="far fa-user"></i> 1 utente</li>
+                        <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
+                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file
+                           semplice e sicura</li>
+                     </ul>
+                     <!-- Button -->
+                     <div class="prova-button">
+                        <a class="btn" href="#">Prova gratis per 30 giorni</a>
+                     </div>
+                     <!-- Acquista ora -->
+                     <span>Oppure</span>
+                     <span><a href="#">acquista ora</a></span>
+                     <!-- Punti salienti del piano -->
+                     <h3>Punti salienti del piano</h3>
+                     <div class="punti-salienti">
+                        <ul>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Invia file fino a 100 GB con Dropbox Transfert
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Cartella offline su dispositivi mobili
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Pulizia remota dell'acount
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Filigrana documento
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Assistenza prioritaria via email e chat
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
+               <div class="table third f-left">
+                  <div class="n-customer">
+                     <span>
+                        <i class="far fa-user"></i>
+                        Singolo
+                     </span>
+                  </div>
+                  <div class="price-info-box">
+                     <h2>Professional</h2>
+                     <h3 class="price">19,99 &euro;</h3>
+                     <p class="price-time">/ mese</p>
+                     <!-- Icon section -->
+                     <ul>
+                        <li><i class="far fa-user"></i> 1 utente</li>
+                        <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
+                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file
+                           semplice e sicura</li>
+                     </ul>
+                     <!-- Button -->
+                     <div class="prova-button">
+                        <a class="btn" href="#">Prova gratis per 30 giorni</a>
+                     </div>
+                     <!-- Acquista ora -->
+                     <span>Oppure</span>
+                     <span><a href="#">acquista ora</a></span>
+                     <!-- Punti salienti del piano -->
+                     <h3>Punti salienti del piano</h3>
+                     <div class="punti-salienti">
+                        <ul>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Invia file fino a 100 GB con Dropbox Transfert
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Cartella offline su dispositivi mobili
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Pulizia remota dell'acount
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Filigrana documento
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Assistenza prioritaria via email e chat
+                           </li>
+                        </ul>
+                     </div>
+                  </div>
+               </div>
             </div>
          </section>
       </div>
