--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
    <!-- Main -->
    <main>
       <div class="container-60">
+         <!-- Prezzi -->
          <section id="prices">
             <h2>Trova il piano Dropbox Business che fa per te</h2>
             <div id="scelta-fatturazione">
@@ -83,6 +84,7 @@
                <span class="fatturazione">Fatturazione annuale</span>
             </div>
             <div id="prices-table" class="clearfix">
+               <!-- Prima colonna -->
                <div class="table first f-left">
                   <div class="n-customer">
                      <span>
@@ -136,22 +138,23 @@
                      </div>
                   </div>
                </div>
+               <!-- Seconda colonna -->
                <div class="table second f-left">
                   <div class="n-customer">
                      <span>
-                        <i class="far fa-user"></i>
-                        Singolo
+                        <i class="far fa-building"></i>
+                        Team
                      </span>
                   </div>
                   <div class="price-info-box">
-                     <h2>Professional</h2>
+                     <h2>Standard</h2>
                      <h3 class="price">19,99 &euro;</h3>
-                     <p class="price-time">/ mese</p>
+                     <p class="price-time">/ utente / mese, a partire da 3 utenti</p>
                      <!-- Icon section -->
                      <ul>
-                        <li><i class="far fa-user"></i> 1 utente</li>
+                        <li><i class="fas fa-user-plus"></i> 1 utente</li>
                         <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
-                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file
+                        <li><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file
                            semplice e sicura</li>
                      </ul>
                      <!-- Button -->
@@ -180,6 +183,10 @@
                            <li>
                               <i class="fas fa-check"></i>
                               Filigrana documento
+                           </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Assistenza prioritaria via email e chat
                            </li>
                            <li>
                               <i class="fas fa-check"></i>
@@ -189,21 +196,22 @@
                      </div>
                   </div>
                </div>
+               <!-- Terza colonna -->
                <div class="table third f-left">
                   <div class="n-customer">
                      <span>
-                        <i class="far fa-user"></i>
-                        Singolo
+                        <i class="far fa-building"></i>
+                        Team
                      </span>
                   </div>
                   <div class="price-info-box">
-                     <h2>Professional</h2>
+                     <h2>Advanced</h2>
                      <h3 class="price">19,99 &euro;</h3>
                      <p class="price-time">/ mese</p>
                      <!-- Icon section -->
                      <ul>
-                        <li><i class="far fa-user"></i> 1 utente</li>
-                        <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
+                        <li><i class="fas fa-user-plus"></i> 1 utente</li>
+                        <li><i class="far fa-smile"></i> 3 TB di spazio di archiviazione sicuro</li>
                         <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file
                            semplice e sicura</li>
                      </ul>
@@ -238,9 +246,22 @@
                               <i class="fas fa-check"></i>
                               Assistenza prioritaria via email e chat
                            </li>
+                           <li>
+                              <i class="fas fa-check"></i>
+                              Assistenza prioritaria via email e chat
+                           </li>
                         </ul>
                      </div>
                   </div>
+               </div>
+            </div>
+            <!-- Tabella prezzi orizzontale -->
+            <div class="contatta-ufficio-vendite">
+               <div class="n-customer">
+                  <span>
+                     <i class="far fa-building"></i>
+                     Team
+                  </span>
                </div>
             </div>
          </section>
