add margin utilities classes

--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
       <!-- Nav bar -->
       <nav id="nav" class="clearfix">
          <!-- Parte sinistra -->
-         <div id="nav-left" class="w-50 f-left">
+         <div id="nav-left" class="w-50 f-left m-rl-15">
             <img id="logo" src="img/logo-small.png" alt="Dropbox Logo">
             <ul>
-               <li><a href="#">Perchè Dropbox?</a></li>
-               <li><a href="#">Funzioni</a></li>
-               <li><a href="#">Piani e prezzi</a></li>
+               <li class="m-tb-15"><a class="m-rl-20" href="#">Perchè Dropbox?</a></li>
+               <li class="m-tb-15"><a class="m-rl-20" href="#">Funzioni</a></li>
+               <li class="m-tb-15"><a class="m-rl-20" href="#">Piani e prezzi</a></li>
             </ul>
          </div>
          <!-- Parte destra -->
-         <div id="nav-right" class="w-50 f-left">
+         <div id="nav-right" class="w-50 f-left m-rl-15">
             <ul>
-               <li><a href="#">Supporto</a></li>
-               <li><a href="#">Contatta l'ufficio vendite</a></li>
-               <li><a href="#">Accedi</a></li>
+               <li class="m-tb-15"><a class="m-rl-20" href="#">Supporto</a></li>
+               <li class="m-tb-15"><a class="m-rl-20" href="#">Contatta l'ufficio vendite</a></li>
+               <li class="m-tb-15"><a class="m-rl-20" href="#">Accedi</a></li>
             </ul>
-            <a class="btn" href="#">Inizia</a>
+            <a class="btn m-rl-25" href="#">Inizia</a>
          </div>
       </nav>
       <!-- Jumbotron -->
@@ -47,7 +47,7 @@
          <div class="container-70 relative">
             <!-- Titolo jumbo -->
             <div id="jumbo-title">
-               <h1>Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
+               <h1 class="m-t-100">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             </div>
             <div id="jumbo-content" class="clearfix">
                <!-- testo jumbo -->
@@ -77,13 +77,13 @@
          <!-- Prezzi -->
          <section id="prices">
             <h2>Trova il piano Dropbox Business che fa per te</h2>
-            <div id="scelta-fatturazione">
+            <div id="scelta-fatturazione" class="m-t-50">
                <div class="fake-radio first"></div>
-               <span class="fatturazione">Fatturazione mensile</span>
+               <span class="fatturazione m-r-15">Fatturazione mensile</span>
                <div class="fake-radio second"></div>
-               <span class="fatturazione">Fatturazione annuale</span>
+               <span class="fatturazione m-r-15">Fatturazione annuale</span>
             </div>
-            <div id="prices-table" class="clearfix">
+            <div id="prices-table" class="clearfix m-t-30">
                <!-- Prima colonna -->
                <div class="table first f-left">
                   <div class="n-customer">
@@ -94,17 +94,18 @@
                   </div>
                   <div class="price-info-box">
                      <h2>Professional</h2>
-                     <h3 class="price">19,99 &euro;</h3>
+                     <h3 class="price m-tb-15">19,99 &euro;</h3>
                      <p class="price-time">/ mese</p>
                      <!-- Icon section -->
-                     <ul>
-                        <li><i class="far fa-user"></i> 1 utente</li>
-                        <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
-                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file
+                     <ul class="m-tb-20">
+                        <li class="m-tb-15"><i class="far fa-user"></i> 1 utente</li>
+                        <li class="m-tb-15"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
+                        <li class="m-tb-15"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e
+                           condivisione file
                            semplice e sicura</li>
                      </ul>
                      <!-- Button -->
-                     <div class="prova-button">
+                     <div class="prova-button m-b-30">
                         <a class="btn" href="#">Prova gratis per 30 giorni</a>
                      </div>
                      <!-- Acquista ora -->
@@ -113,24 +114,24 @@
                      <!-- Punti salienti del piano -->
                      <h3>Punti salienti del piano</h3>
                      <div class="punti-salienti">
-                        <ul>
-                           <li>
+                        <ul class="m-tb-20">
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Invia file fino a 100 GB con Dropbox Transfert
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Cartella offline su dispositivi mobili
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Pulizia remota dell'acount
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Filigrana documento
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Assistenza prioritaria via email e chat
                            </li>
@@ -139,7 +140,7 @@
                   </div>
                </div>
                <!-- Seconda colonna -->
-               <div class="table second f-left">
+               <div class="table second f-left m-rl-60">
                   <div class="n-customer">
                      <span>
                         <i class="far fa-building"></i>
@@ -148,13 +149,14 @@
                   </div>
                   <div class="price-info-box">
                      <h2>Standard</h2>
-                     <h3 class="price">19,99 &euro;</h3>
+                     <h3 class="price m-tb-15">19,99 &euro;</h3>
                      <p class="price-time">/ utente / mese, a partire da 3 utenti</p>
                      <!-- Icon section -->
-                     <ul>
-                        <li><i class="fas fa-user-plus"></i> 1 utente</li>
-                        <li><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
-                        <li><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione file
+                     <ul class="m-tb-20">
+                        <li class="m-tb-15"><i class="fas fa-user-plus"></i> 1 utente</li>
+                        <li class="m-tb-15"><i class="far fa-folder"></i> 3 TB di spazio di archiviazione sicuro</li>
+                        <li class="m-tb-15"><i class="far fa-smile"></i> Funzioni di produttività premium e condivisione
+                           file
                            semplice e sicura</li>
                      </ul>
                      <!-- Button -->
@@ -167,28 +169,28 @@
                      <!-- Punti salienti del piano -->
                      <h3>Punti salienti del piano</h3>
                      <div class="punti-salienti">
-                        <ul>
-                           <li>
+                        <ul class="m-tb-20">
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Invia file fino a 100 GB con Dropbox Transfert
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Cartella offline su dispositivi mobili
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Pulizia remota dell'acount
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Filigrana documento
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Assistenza prioritaria via email e chat
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Assistenza prioritaria via email e chat
                            </li>
@@ -206,13 +208,14 @@
                   </div>
                   <div class="price-info-box">
                      <h2>Advanced</h2>
-                     <h3 class="price">19,99 &euro;</h3>
+                     <h3 class="price m-tb-15">19,99 &euro;</h3>
                      <p class="price-time">/ mese</p>
                      <!-- Icon section -->
-                     <ul>
-                        <li><i class="fas fa-user-plus"></i> 1 utente</li>
-                        <li><i class="far fa-smile"></i> 3 TB di spazio di archiviazione sicuro</li>
-                        <li><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e condivisione file
+                     <ul class="m-tb-20">
+                        <li class="m-tb-15"><i class="fas fa-user-plus"></i> 1 utente</li>
+                        <li class="m-tb-15"><i class="far fa-smile"></i> 3 TB di spazio di archiviazione sicuro</li>
+                        <li class="m-tb-15"><i class="fas fa-pencil-alt"></i> Funzioni di produttività premium e
+                           condivisione file
                            semplice e sicura</li>
                      </ul>
                      <!-- Button -->
@@ -225,28 +228,28 @@
                      <!-- Punti salienti del piano -->
                      <h3>Punti salienti del piano</h3>
                      <div class="punti-salienti">
-                        <ul>
-                           <li>
+                        <ul class="m-tb-20">
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Invia file fino a 100 GB con Dropbox Transfert
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Cartella offline su dispositivi mobili
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Pulizia remota dell'acount
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Filigrana documento
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Assistenza prioritaria via email e chat
                            </li>
-                           <li>
+                           <li class="m-tb-15">
                               <i class="fas fa-check"></i>
                               Assistenza prioritaria via email e chat
                            </li>
@@ -256,7 +259,7 @@
                </div>
             </div>
             <!-- Tabella prezzi orizzontale -->
-            <div class="contatta-ufficio-vendite">
+            <div class="contatta-ufficio-vendite m-tb-60">
                <div class="n-customer">
                   <span>
                      <i class="far fa-building"></i>
