add padding utilities classes

--- a/index.html
+++ b/index.html
@@ -43,22 +43,23 @@
          </div>
       </nav>
       <!-- Jumbotron -->
-      <div id="jumbotron">
+      <div id="jumbotron" class="p-t-80">
          <div class="container-70 relative">
             <!-- Titolo jumbo -->
             <div id="jumbo-title">
                <h1 class="m-t-100">Tutto ciò che ti serve per il lavoro, in un unico posto</h1>
             </div>
-            <div id="jumbo-content" class="clearfix">
+            <div id="jumbo-content" class="clearfix p-t-80">
                <!-- testo jumbo -->
                <div id="j-text-box" class="w-25 f-left">
-                  <p>Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo stesso
+                  <p class="p-b-50">Finalmente tutti i tuoi strumenti, contenuti e collaboratori sono accessibili dallo
+                     stesso
                      posto.Dropbox Business è più di uno spazio di archiviazione sicuro: è un modo intelligente e
                      integrato per ottimizzare il flusso di lavoro esistente.</p>
                   <a class="btn" href="#">Inizia la tua prova gratuita</a>
-                  <p id="annulla">Annulla in qualsiasi momento</p>
+                  <p id="annulla" class="p-t-25">Annulla in qualsiasi momento</p>
                   <a class="arrow-down" href="#">
-                     <i class="fa fa-arrow-down fa-3x"></i>
+                     <i class="fa fa-arrow-down fa-3x p-t-50"></i>
                   </a>
                </div>
                <!-- Immagine jumbotron -->
@@ -72,7 +73,7 @@
       </div>
    </header>
    <!-- Main -->
-   <main>
+   <main class="p-t-100">
       <div class="container-60">
          <!-- Prezzi -->
          <section id="prices">
@@ -106,13 +107,13 @@
                      </ul>
                      <!-- Button -->
                      <div class="prova-button m-b-30">
-                        <a class="btn" href="#">Prova gratis per 30 giorni</a>
+                        <a class="btn p-10-35" href="#">Prova gratis per 30 giorni</a>
                      </div>
                      <!-- Acquista ora -->
-                     <span>Oppure</span>
+                     <span class="p-b-30">Oppure</span>
                      <span><a href="#">acquista ora</a></span>
                      <!-- Punti salienti del piano -->
-                     <h3>Punti salienti del piano</h3>
+                     <h3 class="p-t-50">Punti salienti del piano</h3>
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
@@ -160,14 +161,14 @@
                            semplice e sicura</li>
                      </ul>
                      <!-- Button -->
-                     <div class="prova-button">
-                        <a class="btn" href="#">Prova gratis per 30 giorni</a>
+                     <div class="prova-button m-b-30 m-b-30">
+                        <a class="btn p-10-35" href="#">Prova gratis per 30 giorni</a>
                      </div>
                      <!-- Acquista ora -->
-                     <span>Oppure</span>
+                     <span class="p-b-30">Oppure</span>
                      <span><a href="#">acquista ora</a></span>
                      <!-- Punti salienti del piano -->
-                     <h3>Punti salienti del piano</h3>
+                     <h3 class="p-t-50">Punti salienti del piano</h3>
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
@@ -219,14 +220,14 @@
                            semplice e sicura</li>
                      </ul>
                      <!-- Button -->
-                     <div class="prova-button">
-                        <a class="btn" href="#">Prova gratis per 30 giorni</a>
+                     <div class="prova-button m-b-30">
+                        <a class="btn p-10-35" href="#">Prova gratis per 30 giorni</a>
                      </div>
                      <!-- Acquista ora -->
-                     <span>Oppure</span>
+                     <span class="p-b-30">Oppure</span>
                      <span><a href="#">acquista ora</a></span>
                      <!-- Punti salienti del piano -->
-                     <h3>Punti salienti del piano</h3>
+                     <h3 class="p-t-50">Punti salienti del piano</h3>
                      <div class="punti-salienti">
                         <ul class="m-tb-20">
                            <li class="m-tb-15">
