add last prices "table"

--- a/index.html
+++ b/index.html
@@ -261,11 +261,25 @@
             </div>
             <!-- Tabella prezzi orizzontale -->
             <div class="contatta-ufficio-vendite m-tb-60">
+               <!-- Barra superiore -->
                <div class="n-customer">
                   <span>
                      <i class="far fa-building"></i>
                      Team
                   </span>
+               </div>
+               <!-- Contenuto -->
+               <div class="contenuto w-100 clearfix p-30-20">
+                  <div class="w-75 f-left">
+                     <h2 class="p-b-30">Enterprise</h2>
+                     <h3>Contatta l'ufficio vendite per i prezzi</h3>
+                     <p class="p-t-50">Soluzioni personalizzate e supporto su misura per aiutare i professionisti IT
+                        nella gestione su
+                        qualsiasi scala.</p>
+                  </div>
+                  <div class="w-25 f-left text-align-cntr">
+                     <a class="btn w-100" href="#"> Contatta l'ufficio vendite</a>
+                  </div>
                </div>
             </div>
          </section>
