add partner block

--- a/index.html
+++ b/index.html
@@ -283,6 +283,21 @@
                </div>
             </div>
          </section>
+         <!-- Partner -->
+         <div class="w-100 clearfix m-t-200">
+            <div class="w-60 f-left">
+               <img class="w-100" src="img/partner.png" alt="Partner">
+            </div>
+            <div class="w-40 f-left p-t-50 p-l-50">
+               <h2>Entra in contatto con un partner Dropbox</h2>
+               <p class="m-t-30 m-b-60">Trova un pèartner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i
+                  servizi
+                  necessari per
+                  raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto
+                  continui.</p>
+               <a class="btn-white-bg" href="#">Trova un partner</a>
+            </div>
+         </div>
       </div>
    </main>
 </body>
