add cards block

--- a/index.html
+++ b/index.html
@@ -298,6 +298,101 @@
                <a class="btn-white-bg" href="#">Trova un partner</a>
             </div>
          </div>
+         <!-- Più operazioni, cards -->
+         <div id="cards-block">
+            <h2 class="m-t-100">Esegui più operazioni con Dropbox Business</h2>
+            <!-- First cards row -->
+            <div class="card-row m-t-30 m-b-100 clearfix">
+               <!-- First card -->
+               <div class="card f-left m-rl-25">
+                  <picture class="card-pic">
+                     <img src="img/business-feature-switching-tools.png" alt="Switching Tools">
+                  </picture>
+                  <div class="card-text">
+                     <h2>Passa di meno da uno strumento all'altro</h2>
+                     <p class="m-t-25">Porta a termine le attività quitidane con un solo strumento. Crea, modifica e
+                        condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <span>Dropbox Paper</span> direttamente da Dropbox
+                     </p>
+                  </div>
+               </div>
+               <!-- Second card -->
+               <div class="card f-left m-rl-25">
+                  <picture class="card-pic">
+                     <img src="img/business-feature-coordinate-it.png" alt="Coordinate a team">
+                  </picture>
+                  <div class="card-text">
+                     <h2>Passa di meno da uno strumento all'altro</h2>
+                     <p class="m-t-25">Porta a termine le attività quitidane con un solo strumento. Crea, modifica e
+                        condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <span>Dropbox Paper</span> direttamente da Dropbox
+                     </p>
+                  </div>
+               </div>
+               <!-- Third card -->
+               <div class="card f-left m-rl-25">
+                  <picture class="card-pic">
+                     <img src="img/business-feature-multi-device.png" alt="Multi Device">
+                  </picture>
+                  <div class="card-text">
+                     <h2>Passa di meno da uno strumento all'altro</h2>
+                     <p class="m-t-25">Porta a termine le attività quitidane con un solo strumento. Crea, modifica e
+                        condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <span>Dropbox Paper</span> direttamente da Dropbox
+                     </p>
+                  </div>
+               </div>
+            </div>
+            <!-- Second cards row -->
+            <div class="card-row m-t-30 m-b-200 clearfix">
+               <!-- First card -->
+               <div class="card f-left m-rl-25">
+                  <picture class="card-pic">
+                     <img src="img/business-feature-integrations-it.png" alt="Switching Tools">
+                  </picture>
+                  <div class="card-text">
+                     <h2>Passa di meno da uno strumento all'altro</h2>
+                     <p class="m-t-25">Porta a termine le attività quitidane con un solo strumento. Crea, modifica e
+                        condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <span>Dropbox Paper</span> direttamente da Dropbox
+                     </p>
+                  </div>
+               </div>
+               <!-- Second card -->
+               <div class="card f-left m-rl-25">
+                  <picture class="card-pic">
+                     <img src="img/business-feature-send-files-it.png" alt="Coordinate a team">
+                  </picture>
+                  <div class="card-text">
+                     <h2>Passa di meno da uno strumento all'altro</h2>
+                     <p class="m-t-25">Porta a termine le attività quitidane con un solo strumento. Crea, modifica e
+                        condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <span>Dropbox Paper</span> direttamente da Dropbox
+                     </p>
+                  </div>
+               </div>
+               <!-- Third card -->
+               <div class="card f-left m-rl-25">
+                  <picture class="card-pic">
+                     <img src="img/business-feature-security.png" alt="Multi Device">
+                  </picture>
+                  <div class="card-text">
+                     <h2>Passa di meno da uno strumento all'altro</h2>
+                     <p class="m-t-25">Porta a termine le attività quitidane con un solo strumento. Crea, modifica e
+                        condividi
+                        contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                        <span>Dropbox Paper</span> direttamente da Dropbox
+                     </p>
+                  </div>
+               </div>
+            </div>
+         </div>
+         <!-- Clienti -->
       </div>
    </main>
 </body>
