add clients block

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" type="text/css" href="css/style.css">
+   <link rel="stylesheet" type="text/css" href="css/utilities.css">
    <meta name="author" content="Vasco Rossi">
    <meta name="description" content="Dropbox Clone">
    <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -393,6 +394,54 @@
             </div>
          </div>
          <!-- Clienti -->
+         <h2 class="f-50px w-75 m-tb-50">Più di 500.000 team utilizzano Dropbox Business</h2>
+         <a class="m-tb-50" href="#">Scopri di più sui nostri clienti</a>
+      </div>
+      <!-- Block clienti -->
+      <div class="box-clienti m-t-50 clearfix">
+         <div class="clients-logos f-left w-30">
+            <div class="row w-100 h-50 clearfix">
+               <div id="designit-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/designit.svg" alt="">
+               </div>
+               <div id="asu-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/arizona_state_university.svg" alt="">
+               </div>
+            </div>
+            <div class="row w-100 h-50 clearfix">
+               <div id="uf-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/university_of_florida.svg" alt="">
+               </div>
+               <div id="topps-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/topps.svg" alt="">
+               </div>
+            </div>
+         </div>
+         <div class="clients-text f-left w-40 p-50">
+            <img src="img/designit.svg" alt="">
+            <p>"I membri del nostro team lavorano costantemente in Paesi, fusi orari e uffici diversi. Ora molte
+               soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox e Dropbox Paper. Ora
+               molte soluzioni sono compatibili con queste esigenze, ma nessuna è facile quanto Dropbox Paper"</p>
+            <p>Morten Thomsen, Global IT Lead</p>
+         </div>
+         <div class="clients-logos f-left w-30">
+            <div class="row w-100 h-50 clearfix">
+               <div id="world-bicycle-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/world_bicycle_relief.svg" alt="">
+               </div>
+               <div id="heart-corp-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/hearst_corp.svg" alt="">
+               </div>
+            </div>
+            <div class="row w-100 h-50 clearfix">
+               <div id="lonely-pl-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/lonely_planet.svg" alt="">
+               </div>
+               <div id="clear-channel-logo" class="client-logo f-left w-50 h-100 relative">
+                  <img class="abs-centre" src="img/clear_channel.svg" alt="">
+               </div>
+            </div>
+         </div>
       </div>
    </main>
 </body>
